ci: set a custom commit message for dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,8 +7,20 @@ updates:
     allow:
       - dependency-type: "direct"
       - dependency-type: "indirect"
+    labels:
+      - "dependencies"
+      - "go"
+    commit-message:
+      prefix: "chore"
+      include: "scope"
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+    labels:
+      - "dependencies"
+      - "github-actions"
+    commit-message:
+      prefix: "chore"
+      include: "scope"
